@@ -1,3 +1,7 @@
+2011-11-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
+	* scripts/fsindex.tcl: Fix for utime command handling in pure Tcl version
+	* scripts/vfs.tcl:
+
 Release 1.3.1
 
 2011-09-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
